apps/networking/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: dashboard
spec:
  selector:
    app: homepage
  ports:
  - port: 3000
    targetPort: 3000
